[package]
authors = [
    "Hugo <hugo@blockmountain.io",
    "Tiago <tiago@blockmountain.io>"
]
name = "lending-cli"
description = "Command line interface for the Lending Program."
version = "1.0.0"
edition = "2021"
keywords = ["solana", "anchor", "gbg lending", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "devnet" ]
devnet = [
    "anchor-spl/devnet",
    "lending/devnet"
]
mainnet-beta = [
    "lending/mainnet-beta"
]

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = { version = "0.27.0", features = [ "token", "associated_token", ] }
bytemuck = "1.4.0"
clap = { version = "2.33.1"}
chrono = "0.4.19"
lending-client = { path = "../rust/client", version = "=1.4.0" }
lending = { path = "../../lending/programs/lending/", version = "=0.1.7", features = [ "client" ] }
log = "0.4.17"
mpl-token-metadata = { version = "1.13.1", features = [ "no-entrypoint" ] }
mpl-token-auth-rules = { version = "1.4.3", features = [ "no-entrypoint" ] }
serde = "1.0.137"
serde_json = "1.0.81"
solana-account-decoder = "~1.14"
solana-client = "~1.14"
solana-clap-utils = "~1.14"
solana-cli-config = "~1.14"
solana-logger = "~1.14"
solana-sdk = "~1.14"
spl-associated-token-account = { version = "1.1.2", features = ["no-entrypoint"] }
tokio = { version = "1.12.0", features = [ "macros", "rt" ] }
futures = "0.3.15"
futures-util = "0.3.15"
rand = "0.8.3"
thiserror = "1.0.31"